--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Todo List</title>
+    <title>Buankina Maria</title>
     <link rel="stylesheet" href="style.css"> <!-- Общий стиль -->
     <link rel="stylesheet" href="form.css"> <!-- Стиль для формы добавления задачи -->
     <link rel="stylesheet" href="task.css"> <!-- Стиль для задач -->
